# chapkit_ewars_template

./: Dockerfile  Makefile  README.md  compose.ghcr.yml  compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: migration-to-chapkit.md
scripts/: predict.R
